src/python/veda.py

__all__ = ['VEDAdevice_attribute', 'init_device', 'device_cnt']

import numpy as np
import ctypes
import os
import enum

#-------------------------------------------------------------------------------
class VEDAdevice_attribute(enum.Enum):
	VEDA_DEVICE_ATTRIBUTE_CLOCK_RATE				= 0
	VEDA_DEVICE_ATTRIBUTE_CLOCK_BASE				= 1
	VEDA_DEVICE_ATTRIBUTE_MULTIPROCESSOR_COUNT			= 2
	VEDA_DEVICE_ATTRIBUTE_MEMORY_CLOCK_RATE				= 3
	VEDA_DEVICE_ATTRIBUTE_L1D_CACHE_SIZE				= 4
	VEDA_DEVICE_ATTRIBUTE_L1I_CACHE_SIZE				= 5
	VEDA_DEVICE_ATTRIBUTE_L2_CACHE_SIZE				= 6
	VEDA_DEVICE_ATTRIBUTE_ABI_VERSION				= 7
	VEDA_DEVICE_ATTRIBUTE_SINGLE_TO_DOUBLE_PRECISION_PERF_RATIO	= 8
	VEDA_DEVICE_ATTRIBUTE_FIREWARE_VERSION				= 9

#-------------------------------------------------------------------------------
path	= os.path.dirname(__file__)
path	= os.path.abspath(os.path.abspath(path) + "/lib64")
lib	= ctypes.cdll.LoadLibrary(os.path.join(path, 'libveda.so.0')) # TODO: use VEDA_API_VERSION from CMake!

lib.vedaArgsCreate.argtypes			= [ctypes.POINTER(ctypes.c_void_p)]
lib.vedaArgsDestroy.argtypes			= [ctypes.c_void_p]
lib.vedaArgsSetF32.argtypes			= [ctypes.c_void_p, ctypes.c_int, ctypes.c_float]
lib.vedaArgsSetF64.argtypes			= [ctypes.c_void_p, ctypes.c_int, ctypes.c_double]
lib.vedaArgsSetI16.argtypes			= [ctypes.c_void_p, ctypes.c_int, ctypes.c_short]
lib.vedaArgsSetI32.argtypes			= [ctypes.c_void_p, ctypes.c_int, ctypes.c_int]
lib.vedaArgsSetI64.argtypes			= [ctypes.c_void_p, ctypes.c_int, ctypes.c_longlong]
lib.vedaArgsSetI8.argtypes			= [ctypes.c_void_p, ctypes.c_int, ctypes.c_byte]
lib.vedaArgsSetPtr.argtypes			= [ctypes.c_void_p, ctypes.c_int, ctypes.c_void_p]
lib.vedaArgsSetVPtr.argtypes			= [ctypes.c_void_p, ctypes.c_int, ctypes.c_void_p]
lib.vedaArgsSetHMEM.argtypes			= [ctypes.c_void_p, ctypes.c_int, ctypes.c_void_p]
lib.vedaArgsSetStack.argtypes			= [ctypes.c_void_p, ctypes.c_int, ctypes.c_void_p, ctypes.c_int, ctypes.c_ulonglong]
lib.vedaArgsSetU16.argtypes			= [ctypes.c_void_p, ctypes.c_int, ctypes.c_ushort]
lib.vedaArgsSetU32.argtypes			= [ctypes.c_void_p, ctypes.c_int, ctypes.c_uint]
lib.vedaArgsSetU64.argtypes			= [ctypes.c_void_p, ctypes.c_int, ctypes.c_ulonglong]
lib.vedaArgsSetU8.argtypes			= [ctypes.c_void_p, ctypes.c_int, ctypes.c_ubyte]
lib.vedaCtxCreate.argtypes			= [ctypes.POINTER(ctypes.c_void_p), ctypes.c_int, ctypes.c_int]
lib.vedaCtxDestroy.argtypes			= [ctypes.c_void_p]
lib.vedaCtxGet.argtypes				= [ctypes.POINTER(ctypes.c_void_p), ctypes.c_int]
lib.vedaCtxGetApiVersion.argtypes		= [ctypes.c_void_p, ctypes.POINTER(ctypes.c_int)]
lib.vedaCtxGetCurrent.argtypes			= [ctypes.POINTER(ctypes.c_void_p)]
lib.vedaCtxGetDevice.argtypes			= [ctypes.POINTER(ctypes.c_int)]
lib.vedaCtxPopCurrent.argtypes			= [ctypes.POINTER(ctypes.c_void_p)]
lib.vedaCtxPushCurrent.argtypes			= [ctypes.c_void_p]
lib.vedaCtxSetCurrent.argtypes			= [ctypes.c_void_p]
lib.vedaCtxStreamCnt.argtypes			= [ctypes.POINTER(ctypes.c_int)]
lib.vedaCtxSynchronize.argtypes			= []
lib.vedaDeviceDistance.argtypes			= [ctypes.POINTER(ctypes.c_float), ctypes.c_int, ctypes.c_int]
lib.vedaDeviceGet.argtypes			= [ctypes.POINTER(ctypes.c_int), ctypes.c_int]
lib.vedaDeviceGetAttribute.argtypes		= [ctypes.POINTER(ctypes.c_int), ctypes.c_int, ctypes.c_int]
lib.vedaDeviceGetCount.argtypes			= [ctypes.POINTER(ctypes.c_int)]
lib.vedaDeviceGetName.argtypes			= [ctypes.c_void_p, ctypes.c_int, ctypes.c_int]
lib.vedaDeviceGetPower.argtypes			= [ctypes.POINTER(ctypes.c_float), ctypes.c_int]
lib.vedaDeviceGetTemp.argtypes			= [ctypes.POINTER(ctypes.c_float), ctypes.c_int, ctypes.c_int]
lib.vedaDevicePrimaryCtxGetState.argtypes	= [ctypes.c_int, ctypes.POINTER(ctypes.c_uint), ctypes.POINTER(ctypes.c_int)]
lib.vedaDevicePrimaryCtxRelease.argtypes	= [ctypes.c_int]
lib.vedaDevicePrimaryCtxReset.argtypes		= [ctypes.c_int]
lib.vedaDevicePrimaryCtxRetain.argtypes		= [ctypes.POINTER(ctypes.c_void_p), ctypes.c_int]
lib.vedaDevicePrimaryCtxSetFlags.argtypes	= [ctypes.c_int, ctypes.c_uint]
lib.vedaDeviceTotalMem.argtypes			= [ctypes.POINTER(ctypes.c_ulonglong), ctypes.c_int]
lib.vedaDriverGetVersion.argtypes		= [ctypes.POINTER(ctypes.c_char_p)]
lib.vedaExit.argtypes				= []
lib.vedaGetErrorName.argtypes			= [ctypes.c_int, ctypes.POINTER(ctypes.c_char_p)]
lib.vedaGetErrorString.argtypes			= [ctypes.c_int, ctypes.POINTER(ctypes.c_char_p)]
lib.vedaGetVersion.argtypes			= [ctypes.POINTER(ctypes.c_char_p)]
lib.vedaInit.argtypes				= [ctypes.c_uint]
#lib.vedaLaunchHostFunc.argtypes		= [ctypes.c_int, VEDAhost_function fn, ctypes.c_void_p]
lib.vedaLaunchKernel.argtypes			= [ctypes.c_void_p, ctypes.c_int, ctypes.c_void_p]
lib.vedaLaunchKernelEx.argtypes			= [ctypes.c_void_p, ctypes.c_int, ctypes.c_void_p, ctypes.c_int]
lib.vedaMemAlloc.argtypes			= [ctypes.POINTER(ctypes.c_void_p), ctypes.c_ulonglong]
lib.vedaMemAllocAsync.argtypes			= [ctypes.POINTER(ctypes.c_void_p), ctypes.c_ulonglong, ctypes.c_int]
lib.vedaMemAllocHost.argtypes			= [ctypes.POINTER(ctypes.c_void_p), ctypes.c_ulonglong]
lib.vedaMemAllocPitch.argtypes			= [ctypes.POINTER(ctypes.c_void_p), ctypes.POINTER(ctypes.c_ulonglong), ctypes.c_ulonglong, ctypes.c_ulonglong, ctypes.c_uint]
lib.vedaMemAllocPitchAsync.argtypes		= [ctypes.POINTER(ctypes.c_void_p), ctypes.POINTER(ctypes.c_ulonglong), ctypes.c_ulonglong, ctypes.c_ulonglong, ctypes.c_uint, ctypes.c_int]
lib.vedaMemFree.argtypes			= [ctypes.c_void_p]
lib.vedaMemFreeAsync.argtypes			= [ctypes.c_void_p, ctypes.c_int]
lib.vedaMemFreeHost.argtypes			= [ctypes.c_void_p]
lib.vedaMemGetAddressRange.argtypes		= [ctypes.POINTER(ctypes.c_void_p), ctypes.POINTER(ctypes.c_ulonglong), ctypes.c_void_p]
lib.vedaMemGetDevice.argtypes			= [ctypes.POINTER(ctypes.c_int), ctypes.c_void_p]
lib.vedaMemGetInfo.argtypes			= [ctypes.POINTER(ctypes.c_ulonglong), ctypes.POINTER(ctypes.c_ulonglong)]
lib.vedaMemGetRawPointer.argtypes		= [ctypes.POINTER(ctypes.c_void_p), ctypes.c_void_p]
lib.vedaMemGetHMEMPointer.argtypes		= [ctypes.POINTER(ctypes.c_void_p), ctypes.c_void_p]
lib.vedaMemReport.argtypes			= []
lib.vedaMemcpy.argtypes				= [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_ulonglong]
lib.vedaMemcpyAsync.argtypes			= [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_ulonglong, ctypes.c_int]
lib.vedaMemcpyDtoD.argtypes			= [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_ulonglong]
lib.vedaMemcpyDtoDAsync.argtypes		= [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_ulonglong, ctypes.c_int]
lib.vedaMemcpyDtoH.argtypes			= [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_ulonglong]
lib.vedaMemcpyDtoHAsync.argtypes		= [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_ulonglong, ctypes.c_int]
lib.vedaMemcpyHtoD.argtypes			= [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_ulonglong]
lib.vedaMemcpyHtoDAsync.argtypes		= [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_ulonglong, ctypes.c_int]
lib.vedaMemsetD16.argtypes			= [ctypes.c_void_p, ctypes.c_ushort, ctypes.c_ulonglong]
lib.vedaMemsetD16Async.argtypes			= [ctypes.c_void_p, ctypes.c_ushort, ctypes.c_ulonglong, ctypes.c_int]
lib.vedaMemsetD2D16.argtypes			= [ctypes.c_void_p, ctypes.c_ulonglong, ctypes.c_ushort, ctypes.c_ulonglong, ctypes.c_ulonglong]
lib.vedaMemsetD2D16Async.argtypes		= [ctypes.c_void_p, ctypes.c_ulonglong, ctypes.c_ushort, ctypes.c_ulonglong, ctypes.c_ulonglong, ctypes.c_int]
lib.vedaMemsetD2D32.argtypes			= [ctypes.c_void_p, ctypes.c_ulonglong, ctypes.c_uint, ctypes.c_ulonglong, ctypes.c_ulonglong]
lib.vedaMemsetD2D32Async.argtypes		= [ctypes.c_void_p, ctypes.c_ulonglong, ctypes.c_uint, ctypes.c_ulonglong, ctypes.c_ulonglong, ctypes.c_int]
lib.vedaMemsetD2D8.argtypes			= [ctypes.c_void_p, ctypes.c_ulonglong, ctypes.c_ubyte, ctypes.c_ulonglong, ctypes.c_ulonglong]
lib.vedaMemsetD2D8Async.argtypes		= [ctypes.c_void_p, ctypes.c_ulonglong, ctypes.c_ubyte, ctypes.c_ulonglong, ctypes.c_ulonglong, ctypes.c_int]
lib.vedaMemsetD32.argtypes			= [ctypes.c_void_p, ctypes.c_int, ctypes.c_ulonglong]
lib.vedaMemsetD32Async.argtypes			= [ctypes.c_void_p, ctypes.c_int, ctypes.c_ulonglong, ctypes.c_int]
lib.vedaMemsetD64.argtypes			= [ctypes.c_void_p, ctypes.c_ulonglong, ctypes.c_ulonglong]
lib.vedaMemsetD64Async.argtypes			= [ctypes.c_void_p, ctypes.c_ulonglong, ctypes.c_ulonglong, ctypes.c_int]
lib.vedaMemsetD8.argtypes			= [ctypes.c_void_p, ctypes.c_ubyte, ctypes.c_ulonglong]
lib.vedaMemsetD8Async.argtypes			= [ctypes.c_void_p, ctypes.c_ubyte, ctypes.c_ulonglong, ctypes.c_int]
lib.vedaModuleGetFunction.argtypes		= [ctypes.POINTER(ctypes.c_void_p), ctypes.c_void_p, ctypes.c_char_p]
lib.vedaModuleLoad.argtypes			= [ctypes.POINTER(ctypes.c_void_p), ctypes.c_char_p]
lib.vedaModuleUnload.argtypes			= [ctypes.c_void_p]
#lib.vedaStreamAddCallback.argtypes		= [ctypes.c_int, VEDAstream_callback callback, ctypes.c_void_p, ctypes.c_uint]
lib.vedaStreamGetFlags.argtypes			= [ctypes.c_int, ctypes.POINTER(ctypes.c_uint)]
lib.vedaStreamQuery.argtypes			= [ctypes.c_int]
lib.vedaStreamSynchronize.argtypes		= [ctypes.c_int]
